# ZedOne

./: .dockerignore  .gitignore  CMakeLists.txt
include/: server.hpp
scripts/: server_test.py
src/: main.cpp  server.cpp
